# Ageha

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
weather_notifer/: Cargo.toml
weather_notifer/src/: json.rs  main.rs  weather.rs
