[package]
name = "weather_notifer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.16"}
reqwest = {version = "0.11.4", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tokio = {version = "1.10.0", features = ["full"]}
dotenv = "0.15.0"
chrono = "0.4.19"
